Testing paper compilation

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,69 +1,53 @@
-% Encoding: UTF-8
-@BOOK{Claerbout1985,
-  title = {Imaging the Earth's Interior},
-  publisher = {Blackwell Scientific Publications},
-  year = {1985},
-  author = {Jon F. Claerbout},
-  owner = {MartinHansen},
-  timestamp = {2010.03.25},
-  url = {http://sepwww.stanford.edu/data/media/public/sep/prof/iei2/}
+@article{Pearson:2017,
+  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
+  	Archiveprefix = {arXiv},
+  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
+  	Eprint = {1703.04627},
+  	Journal = {ArXiv e-prints},
+  	Keywords = {Astrophysics - Astrophysics of Galaxies},
+  	Month = mar,
+  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
+  	Year = 2017
 }
 
-@BOOK{Margrave2003,
-  title = {Numerical Methods in Exploration Seismology - with algorithms in
-	{M}atlab},
-  publisher = {University of Calgary},
-  year = {2003},
-  author = {Gary M. Margrave},
-  owner = {MartinHansen},
-  timestamp = {2010.02.02},
-  url = {http://www.crewes.org/ResearchLinks/FreeSoftware/NumMeth.pdf}
+@book{Binney:2008,
+  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
+  	Author = {{Binney}, J. and {Tremaine}, S.},
+  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
+  	Publisher = {Princeton University Press},
+  	Title = {{Galactic Dynamics: Second Edition}},
+  	Year = 2008
 }
 
-@ARTICLE{Olofsson2010,
-  author = {Tomas Olofsson},
-  title = {Phase Shift Migration for Imaging Layered Objects and Objects Immersed
-	in Water},
-  journal = {IEEE Trans. Ultrason., Ferroelectr., Freq. Control},
-  year = {2010},
-  volume = {57},
-  pages = {2522-2530},
-  number = {11},
-  month = {November},
-  owner = {MartinHansen},
-  timestamp = {2010.03.24}
+@article{gaia,
+    author = {{Gaia Collaboration}},
+    title = "{The Gaia mission}",
+    journal = {Astronomy and Astrophysics},
+    archivePrefix = "arXiv",
+    eprint = {1609.04153},
+    primaryClass = "astro-ph.IM",
+    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
+    year = 2016,
+    month = nov,
+    volume = 595,
+    doi = {10.1051/0004-6361/201629272},
+    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
 }
 
-@ARTICLE{Stepinski2007,
-  author = {Tadeusz Stepinski},
-  title = {An Implementation of Synthetic Aperture Focusing Technique in Frequency
-	Domain},
-  journal = {IEEE Trans. Ultrason., Ferroelectr., Freq. Control},
-  year = {2007},
-  volume = {54},
-  pages = {1399-1408},
-  number = {7},
-  month = {July},
-  owner = {MartinHansen},
-  timestamp = {2009.09.07}
+@article{astropy,
+    author = {{Astropy Collaboration}},
+    title = "{Astropy: A community Python package for astronomy}",
+    journal = {Astronomy and Astrophysics},
+    archivePrefix = "arXiv",
+    eprint = {1307.6212},
+    primaryClass = "astro-ph.IM",
+    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
+    year = 2013,
+    month = oct,
+    volume = 558,
+    doi = {10.1051/0004-6361/201322068},
+    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
 }
-
-@ARTICLE{Skjelvareid2011a,
-  author = {Martin H. Skjelvareid and Tomas Olofsson and Yngve Birkelund and
-	Yngvar Larsen},
-  title = {Synthetic Aperture Focusing of Ultrasonic Data From Multilayered
-	Media Using an Omega-K Algorithm},
-  journal = {IEEE Trans. Ultrason., Ferroelectr., Freq. Control},
-  year = {2011},
-  volume = {58},
-  pages = {1037-1048},
-  number = {5},
-  month = {May},
-  doi = {10.1109/TUFFC.2011.1904},
-  owner = {martinha},
-  timestamp = {2011.04.08}
-}
-
 
 @misc{fidgit,
   author = {A. M. Smith and K. Thaney and M. Hahnel},
@@ -73,12 +57,3 @@
   journal = {GitHub repository},
   url = {https://github.com/arfon/fidgit}
 }
-@PhdThesis{Skjelvareid2012,
-  author = {Martin H. Skjelvareid},
-  school = {UiT - the Arctic University of Norway},
-  title  = {Synthetic aperture ultrasound imaging with application to interior pipe inspection},
-  year   = {2012},
-  url    = {https://hdl.handle.net/10037/4649},
-}
-
-@Comment{jabref-meta: databaseType:bibtex;}
