--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,59 +1,147 @@
-@article{Pearson:2017,
-  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
-  	Archiveprefix = {arXiv},
-  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
-  	Eprint = {1703.04627},
-  	Journal = {ArXiv e-prints},
-  	Keywords = {Astrophysics - Astrophysics of Galaxies},
-  	Month = mar,
-  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
-  	Year = 2017
+@ARTICLE{Stolt1978,
+  author = {R. H. Stolt},
+  title = {Migration by {F}ourier Transform},
+  journal = {Geophysics},
+  year = {1978},
+  volume = {43},
+  pages = {23-48},
+  number = {1},
+  month = {February},
+  file = {Stolt1978 - Migration by transform.pdf:Stolt1978 - Migration by transform.pdf:PDF},
+  owner = {MartinHansen},
+  timestamp = {2009.09.04}
 }
 
-@book{Binney:2008,
-  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
-  	Author = {{Binney}, J. and {Tremaine}, S.},
-  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
-  	Publisher = {Princeton University Press},
-  	Title = {{Galactic Dynamics: Second Edition}},
-  	Year = 2008
+@ARTICLE{Gazdag1978,
+  author = {Jen\"{o} Gazdag},
+  title = {Wave equation migration with the phase-shift method},
+  journal = {Geophysics},
+  year = {1978},
+  volume = {43},
+  pages = {1342-1351},
+  number = {7},
+  file = {Gazdag1978 - Wave equation migration with the phase-shift method.pdf:Gazdag1978 - Wave equation migration with the phase-shift method.pdf:PDF},
+  owner = {MartinHansen},
+  timestamp = {2009.11.16}
 }
 
-@article{gaia,
-    author = {{Gaia Collaboration}},
-    title = "{The Gaia mission}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1609.04153},
-    primaryClass = "astro-ph.IM",
-    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
-    year = 2016,
-    month = nov,
-    volume = 595,
-    doi = {10.1051/0004-6361/201629272},
-    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
+@BOOK{Margrave2003,
+  title = {Numerical Methods in Exploration Seismology - with algorithms in
+	{M}atlab},
+  publisher = {University of Calgary},
+  year = {2003},
+  author = {Gary M. Margrave},
+  url = {http://www.crewes.org/ResearchLinks/FreeSoftware/NumMeth.pdf}
 }
 
-@article{astropy,
-    author = {{Astropy Collaboration}},
-    title = "{Astropy: A community Python package for astronomy}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1307.6212},
-    primaryClass = "astro-ph.IM",
-    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
-    year = 2013,
-    month = oct,
-    volume = 558,
-    doi = {10.1051/0004-6361/201322068},
-    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
+@inbook{margrave_lamoureux_2019, 
+  place={Cambridge},
+  title={Elementary Migration Methods},
+  DOI={10.1017/9781316756041.008},
+  booktitle={Numerical Methods of Exploration Seismology: With Algorithms in MATLAB®},
+  publisher={Cambridge University Press},
+  author={Margrave, Gary F. and Lamoureux, Michael P.},
+  year={2019},
+  pages={351–434}}
+
+@misc{crewes_toolbox_2021,
+    author = {Gary F. Margrave},
+    title = {CREWES Matlab Toolbox and Textbook},
+    year = {2021},
+    publisher = {CREWES},
+    journal = {CREWES wabsite},
+    url = {https://www.crewes.org/ResearchLinks/FreeSoftware/}
+  }
+
+@ARTICLE{Olofsson2010,
+  author = {Tomas Olofsson},
+  title = {Phase Shift Migration for Imaging Layered Objects and Objects Immersed
+	in Water},
+  journal = {IEEE Trans. Ultrason., Ferroelectr., Freq. Control},
+  year = {2010},
+  volume = {57},
+  pages = {2522-2530},
+  number = {11},
+  month = {November},
+  owner = {MartinHansen},
+  timestamp = {2010.03.24}
 }
 
-@misc{fidgit,
-  author = {A. M. Smith and K. Thaney and M. Hahnel},
-  title = {Fidgit: An ungodly union of GitHub and Figshare},
-  year = {2020},
+@ARTICLE{Stepinski2007,
+  author = {Tadeusz Stepinski},
+  title = {An Implementation of Synthetic Aperture Focusing Technique in Frequency
+	Domain},
+  journal = {IEEE Trans. Ultrason., Ferroelectr., Freq. Control},
+  year = {2007},
+  volume = {54},
+  pages = {1399-1408},
+  number = {7},
+  month = {July},
+  owner = {MartinHansen},
+  timestamp = {2009.09.07}
+}
+
+@ARTICLE{Skjelvareid2011a,
+  author = {Martin H. Skjelvareid and Tomas Olofsson and Yngve Birkelund and
+	Yngvar Larsen},
+  title = {Synthetic Aperture Focusing of Ultrasonic Data From Multilayered
+	Media Using an Omega-K Algorithm},
+  journal = {IEEE Trans. Ultrason., Ferroelectr., Freq. Control},
+  year = {2011},
+  volume = {58},
+  pages = {1037-1048},
+  number = {5},
+  month = {May},
+  doi = {10.1109/TUFFC.2011.1904},
+  owner = {martinha},
+  timestamp = {2011.04.08}
+}
+
+@article{Skjelvareid2012a,
+  title={Synthetic aperture focusing of outwardly directed cylindrical ultrasound scans},
+  author={Skjelvareid, Martin H and Birkelund, Yngve and Larsen, Yngvar},
+  journal={IEEE transactions on ultrasonics, ferroelectrics, and frequency control},
+  volume={59},
+  number={11},
+  pages={2460--2469},
+  year={2012},
+  publisher={IEEE}
+}
+
+@PhdThesis{Skjelvareid2012b,
+  author = {Martin H. Skjelvareid},
+  school = {UiT - the Arctic University of Norway},
+  title  = {Synthetic aperture ultrasound imaging with application to interior pipe inspection},
+  year   = {2012},
+  url    = {https://hdl.handle.net/10037/4649},
+}
+
+@article{Skjelvareid2013,
+  title={Internal pipeline inspection using virtual source synthetic aperture ultrasound imaging},
+  author={Skjelvareid, Martin H and Birkelund, Yngve and Larsen, Yngvar},
+  journal={Ndt \& E International},
+  volume={54},
+  pages={151--158},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@misc{NSGeophysics2017,
+  author = {Alain Plattner},
+  title = {Near Surface Geophysics},
+  year = {2017},
   publisher = {GitHub},
   journal = {GitHub repository},
-  url = {https://github.com/arfon/fidgit}
+  url = {https://github.com/NSGeophysics/GPR-O/blob/master/tools/stolt_fk_mig.m}
+}
+
+@article{wu2015synthetic,
+  title={Synthetic aperture imaging for multilayer cylindrical object using an exterior rotating transducer},
+  author={Wu, Shiwei and Skjelvareid, Martin H and Yang, Keji and Chen, Jian},
+  journal={Review of Scientific Instruments},
+  volume={86},
+  number={8},
+  pages={083703},
+  year={2015},
+  publisher={AIP Publishing LLC}
 }
