Fixed reference Williams1999

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -34,15 +34,14 @@
   url = {http://www.crewes.org/ResearchLinks/FreeSoftware/NumMeth.pdf}
 }
 
-@inbook{margrave_lamoureux_2019, 
+@book{margrave_lamoureux_2019,
   place={Cambridge},
-  title={Elementary Migration Methods},
-  DOI={10.1017/9781316756041.008},
-  booktitle={Numerical Methods of Exploration Seismology: With Algorithms in MATLAB®},
+  title={Numerical Methods of Exploration Seismology: With Algorithms in MATLAB®},
+  DOI={10.1017/9781316756041},
   publisher={Cambridge University Press},
   author={Margrave, Gary F. and Lamoureux, Michael P.},
-  year={2019},
-  pages={351–434}}
+  year={2019}
+}
 
 @misc{crewes_toolbox_2021,
     author = {Gary F. Margrave},
@@ -52,6 +51,15 @@
     journal = {CREWES wabsite},
     url = {https://www.crewes.org/ResearchLinks/FreeSoftware/}
   }
+
+@BOOK{Williams1999,
+    title = {Fourier Acoustics: Sound Radiation and Nearfield Acoustical Holography},
+    publisher = {Academic Press},
+    year = {1999},
+    author = {Earl G. Williams},
+    owner = {martinha},
+    timestamp = {2010.09.23}
+}
 
 @ARTICLE{Olofsson2010,
   author = {Tomas Olofsson},
