Added references to other software

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -9,6 +9,7 @@
   month = {February},
   file = {Stolt1978 - Migration by transform.pdf:Stolt1978 - Migration by transform.pdf:PDF},
   owner = {MartinHansen},
+  doi = {10.1190/1.1440826},
   timestamp = {2009.09.04}
 }
 
@@ -22,16 +23,8 @@
   number = {7},
   file = {Gazdag1978 - Wave equation migration with the phase-shift method.pdf:Gazdag1978 - Wave equation migration with the phase-shift method.pdf:PDF},
   owner = {MartinHansen},
+  doi = {10.1190/1.1440899},
   timestamp = {2009.11.16}
-}
-
-@BOOK{Margrave2003,
-  title = {Numerical Methods in Exploration Seismology - with algorithms in
-	{M}atlab},
-  publisher = {University of Calgary},
-  year = {2003},
-  author = {Gary M. Margrave},
-  url = {http://www.crewes.org/ResearchLinks/FreeSoftware/NumMeth.pdf}
 }
 
 @book{margrave_lamoureux_2019,
@@ -72,6 +65,7 @@
   number = {11},
   month = {November},
   owner = {MartinHansen},
+  doi = {10.1109/TUFFC.2010.1718},
   timestamp = {2010.03.24}
 }
 
@@ -86,6 +80,7 @@
   number = {7},
   month = {July},
   owner = {MartinHansen},
+  doi = {10.1109/TUFFC.2007.400},
   timestamp = {2009.09.07}
 }
 
@@ -113,7 +108,8 @@
   number={11},
   pages={2460--2469},
   year={2012},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi = {10.1109/TUFFC.2012.2478}
 }
 
 @PhdThesis{Skjelvareid2012b,
@@ -131,7 +127,8 @@
   volume={54},
   pages={151--158},
   year={2013},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi = {10.1016/j.ndteint.2012.10.005}
 }
 
 @misc{NSGeophysics2017,
@@ -151,5 +148,43 @@
   number={8},
   pages={083703},
   year={2015},
-  publisher={AIP Publishing LLC}
+  publisher={AIP Publishing LLC},
+  doi = {10.1063/1.4928118}
+}
+
+@misc{field2,
+  author = {Jørgen Arendt Jensen},
+  title = {Field II Simulation Program},
+  year = {2021},
+  publisher = {Technical University of Denmark},
+  journal = {Field II website},
+  url = {https://field-ii.dk/}
+}
+
+@misc{beamformationtoolbox,
+  author = {Svetoslav Ivanov Nikolov},
+  title = {Beamformation Toolbox},
+  year = {2017},
+  publisher = {BitBucket},
+  journal = {BitBucket repository},
+  url = {https://bitbucket.org/svetoslav_nikolov/beamformation-toolbox/}
+}
+
+@misc{kwave,
+  author = {Svetoslav Ivanov Nikolov},
+  title = {Beamformation Toolbox},
+  year = {2020},
+  publisher = {K-wave team},
+  journal = {K-wave website},
+  url = {http://www.k-wave.org}
+}
+
+@inproceedings{rodriguez2017,
+  title={The ultrasound toolbox},
+  author={Rodriguez-Molares, Alfonso and Rindal, Ole Marius Hoel and Bernard, Olivier and Nair, Arun and Bell, Muyinatu A Lediju and Liebgott, Herv{\'e} and Austeng, Andreas and others},
+  booktitle={2017 IEEE International Ultrasonics Symposium (IUS)},
+  pages={1--4},
+  year={2017},
+  organization={IEEE},
+  doi={10.1109/ULTSYM.2017.8092389}
 }
